--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   </header>
 
   <main>
+    <p>Antes acesse: <a
+        href="https://open.spotify.com/intl-pt/track/3hRV0jL3vUpRrcy398teAU?si=2f5519c387dc404d"
+        target="_blank"
+      >
+        Clique aqui
+      </a></p>
     <!-- SEÇÕES DE MOMENTOS ESPECIAIS -->
     <!-- 10/05 -->
     <section class="momento-container">
